<?xml version="1.0" encoding="utf-8"?>
<resources>    
    <string name="app_name">Hiredo</string>
    <string name="action_settings">Settings</string>
    
    <string name="logo_description">Logo</string>
    <string name="banniere_description">Banniere</string>
    <string name="image_description">Image</string>
    
    <string name="login_Authentication">Authentication</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_ok_description">OK_button</string>
    <string name="login_register_recruter">Register as a recruiter -></string>
    <string name="login_register_candidate">Register as a job Seeker -></string>
    <string name="login_space">\t\t</string>
    
    <string name="presentation_text">You are looking for a job ?\nYou are hiring a condidate ?\nGood, you are using the best way.\n\nHireDo is a mobile application that allow you to post a CV and a video that describes you.\nIt is also a way that allows employees to find a good candidates.\n\nWith HireDo, you will save time on looking for job, Get Ready for Hiring !!!</string>
    <string name="presentation_text_land">You are looking for a job ? You are hiring a condidate ? Good, you are using the best way.\n\nHireDo is a mobile application that allow you to post a CV and a video that describes you. It is also a way that allows employees to find a good candidates.\n\nWith HireDo, you will save time on looking for job, Get Ready for Hiring !!!</string>
    <string name="presentation_closebutton_description">Close</string>
    <string name="presentation_gobutton_description">Go Now</string>
    
    <string name="jobseekerregister_title">Registration Jobseeker</string>
    <string name="jobseekerregister_name">Your name</string>
    <string name="jobseekerregister_firstname">Your first name</string>
    <string name="jobseekerregister_email">Your email address</string>
    <string name="jobseekerregister_password">Enter Password</string>
    <string name="jobseekerregister_retypepassword">Retype Password</string>
    <string name="jobseekerregister_ok">OK</string>
    
    <string name="recruterregister_title">Registration Recruiter</string>
    <string name="recruterregister_enterprisename">The Enterprise Name</string>
    <string name="recruterregister_activitysector">Activity Sector</string>
    <string name="recruterregister_email">Your Email</string>
    <string name="recruterregister_password">Enter Password</string>
    <string name="recruterregister_retypepassword">Retype password</string>
    <string name="recruterregister_ok">OK</string>
    
    <string name="profilcandidate_experience">Experiences</string>
    <string name="profilcandidate_education">Education</string>
    <string name="profilcandidate_language">Languages</string>
    <string name="profilcandidate_contact">Contact</string>
    <string name="profilcandidate_video_description">Video</string>
    <string name="profilcandidate_aboutme">About me</string>
    <string name="profilcandidate_videocall">Video call</string>
    
    <string name="profilenterprise_contact">Contact</string>
    <string name="profilenterprise_telephone">Phones</string>
    <string name="profilenterprise_about">About</string>
    
    <string name="modifierProfilEnterprise_title">Edit Profile</string>
    <string name="modifierProfilEnterprise_name">New enterprise name</string>
    <string name="modifierProfilEnterprise_activitySector">Activity Sector</string>
    <string name="modifierProfilEnterprise_nbreemployee">Employees number</string>
    <string name="modifierProfilEnterprise_resume">New resume</string>
    <string name="modifierProfilEnterprise_address">New address</string>
    <string name="modifierProfilEnterprise_city">New City</string>
    <string name="modifierProfilEnterprise_website">New website</string>
    <string name="modifierProfilEnterprise_email">New email</string>
    <string name="modifierProfilEnterprise_telephone">New phone number</string>
    <string name="modifierProfilEnterprise_fax">New fax number</string>
    <string name="modifierProfilEnterprise_btnModifier">Save</string>
    
    <string name="modifierProfilJobseeker_main_title">Edit Profile</string>
    <string name="modifierProfilJobseeker_name">Name</string>
    <string name="modifierProfilJobseeker_lastname">Last name</string>
    <string name="modifierProfilJobseeker_profil_title">Profile title</string>
    <string name="modifierProfilJobseeker_address">Address</string>
    <string name="modifierProfilJobseeker_city">City</string>
    <string name="modifierProfilJobseeker_telephone">Phone number</string>
    <string name="modifierProfilJobseeker_resume">Resume</string>
    <string name="modifierProfilJobseeker_website">Web site</string>
    <string name="modifierProfilJobseeker_btnmodifier">Save</string>
    
    <string name="applyjob_title">Job Details</string>
    <string name="applyjob_jobTitle">Title</string>
    <string name="applyjob_jobDescription">Description</string>
    <string name="applyjob_jobInformation">Informations</string>
    <string name="applyjob_jobType">Type:</string>
    <string name="applyjob_jobCity">City:</string>
    <string name="applyjob_jobDomaine">Domain:</string>
    <string name="applyjob_jobDate">Date:</string>
    <string name="applyjob_btnApply">Apply</string>
    
    <string name="detailoffre_title">Offer Details</string>
    <string name="detailoffre_offerTitle">Title</string>
    <string name="detailoffre_offerDescription">Description</string>
    <string name="detailoffre_offerInformation">Informations</string>
    <string name="detailoffre_offerType">Type:</string>
    <string name="detailoffre_offerCity">City:</string>
    <string name="detailoffre_offerDomaine">Domain:</string>
    <string name="detailoffre_offerPostule">Postule</string>
    <string name="detailoffre_offerDate">Date:</string>
    <string name="detailoffre_click">Click to see candidates on this job</string>
    <string name="detailoffre_btnSupprimer">Delete</string>
    
    <string name="detailpostule_title">Postule Details</string>
    <string name="detailpostule_user">Who postulate</string>
    <string name="detailpostule_date">When postulate</string>
    <string name="detailpostule_detail">Details</string>
    <string name="detailpostule_cv">Click to open candidate CV</string>
    <string name="detailpostule_lm">Click to open candidate Cover letter</string>
    <string name="detailpostule_video">Click to open candidate presentation video</string>
    <string name="detailpostule_btnaccept">Accept</string>
    <string name="detailpostule_btnreject">Reject</string>
    
    <string name="postulerjob_title">Apply on this job</string>
    <string name="postulerjob_apply">Apply</string>
    
    <string name="listjobmenu_type">Select Domain</string>
    <string name="listjobmenu_search">Search</string>
    <string name="listjobmenu_showAll">Show all</string>
    
    <string name="listjobmenu_recruiter_refresh">Refresh</string>
    
    <string name="slidingmenu_titre">Options</string>
    <string name="slidingmenu_description">Image</string>
    
    <string name="ajouteroffre_title">Add a job</string>
    <string name="ajouteroffre_job_title">Job title</string>
    <string name="ajouteroffre_job_city">City</string>
    <string name="ajouteroffre_job_description">Description</string>
    <string name="ajouteroffre_btnajouter">Add</string>
    
    <string name="rechercher_title">Search</string>
    <string name="rechercher_text">Text to search</string>
    <string name="rechercher_city">City</string>
    <string name="rechercher_btnsearch">Search</string>
    
    <string name="ajouter_experience_main_title">Add experience</string>
    <string name="ajouter_experience_title">Experience title</string>
    <string name="ajouter_experience_entreprise">Enterprise</string>
    <string name="ajouter_experience_location">Location</string>
    <string name="ajouter_experience_link">Link</string>
    <string name="ajouter_experience_description">Description</string>
    <string name="ajouter_experience_date">Select date</string>
    <string name="ajouter_experience_btnajouter">Add</string>
    
    <string name="ajoutereducation_main_title">Add education</string>
    <string name="ajoutereducation_title">Education title</string>
	<string name="ajoutereducation_deploma">Diploma</string>
	<string name="ajoutereducation_university">University</string>
	<string name="ajoutereducation_location">Location</string>
	<string name="ajoutereducation_date">Select date</string>
	<string name="ajoutereducation_btnajouter">Add</string>
	
	<string name="ajouterlangage_main_title">Add language</string>
	<string name="ajouterlangage_langage">Language</string>
    <string name="ajouterlangage_btnajouter">Add</string>
    
    <string name="ajoutercv_title">Add CV</string>
    <string name="ajoutercv_btnbrowse">Browse CV</string>
    <string name="ajoutercv_btnajouter">Send</string>
    
    <string name="ajouterlm_title">Add Cover Letter</string>
    <string name="ajouterlm_btnbrowse">Browse letter</string>
    <string name="ajouterlm_btnajouter">Send</string>
    
    <string name="ajoutervideo_title">Add video</string>
    <string name="ajoutervideo_btnbrowse">Browse video</string>
    <string name="ajoutervideo_btnajouter">Send</string>
    
    <string name="changervideo_title">Choose video</string>
    <string name="changervideo_description">This video is the principal video that will posted on your profile. In this video, you should present yourself and describe who you are. A recruiter can so know you better through this video</string>
    <string name="changervideo_btnmodifier">Apply</string>
    
</resources>
