<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none"
	android:fillViewport="true" >
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/gris_background" >
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header"
		    android:orientation="vertical" >
		
		    <ImageView 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/logo"
		        android:scaleType="fitStart"
		        android:layout_marginLeft="10sp"
		        android:contentDescription="@string/logo_description" />
		    
		    <View 
				android:layout_width="fill_parent"
				android:layout_height="@dimen/separator"
				android:background="@color/noir" />
	    
	    </LinearLayout>
	    
	    <TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/modifierProfilEnterprise_title"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/rouge_bordeau"
			android:layout_margin="@dimen/margin_medium"
			android:layout_gravity="center" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_name"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="textPersonName"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_name" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_activitySector"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="text"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_activitySector" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_resume"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="text"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_resume" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_address"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="text"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_address" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_website"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="textUri"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_website" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_email"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="textEmailAddress"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_email" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_telephone"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="phone"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_telephone" />
	    
	    <EditText 
			android:id="@+id/modifierEntreprise_fax"
			android:layout_width="fill_parent"
			android:layout_height="40dp"
			android:inputType="phone"
			android:background="@color/blanc"
			android:layout_margin="@dimen/margin_small"
			android:hint="@string/modifierProfilEnterprise_fax" />
	    
	    <Button 
		    android:id="@+id/modifierprofil_btnmodifier"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_margin="@dimen/margin_small"
		    android:layout_gravity="right"
		    android:text="@string/modifierProfilEnterprise_btnModifier"/>
	   
	</LinearLayout>
</ScrollView>
