<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gris_background" >
    
    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@layout/header"
	    android:orientation="vertical" >
	    
	    <ImageView 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/logo"
	        android:scaleType="fitStart"
	        android:layout_marginLeft="10sp"
	        android:contentDescription="@string/logo_description" />
	    
    </LinearLayout>
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/look"
        android:background="@color/noir"
        android:contentDescription="@string/banniere_description" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
	    
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/jobseekerregister_title"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/rouge_bordeau"
			android:layout_margin="10dp"
			android:layout_gravity="center" />
		
		<EditText 
            android:id="@+id/jobseekerregister_name"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@color/blanc"
            android:layout_margin="5dp"
            android:hint="@string/jobseekerregister_name" />
		
		<EditText 
            android:id="@+id/jobseekerregister_firstname"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:background="@color/blanc"
            android:layout_margin="5dp"
            android:hint="@string/jobseekerregister_firstname" />
		
		<EditText 
            android:id="@+id/jobseekerregister_email"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:background="@color/blanc"
            android:layout_margin="5dp"
            android:hint="@string/jobseekerregister_email" />
		
		<EditText 
            android:id="@+id/jobseekerregister_password"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:background="@color/blanc"
            android:layout_margin="5dp"
            android:hint="@string/jobseekerregister_password" />
		
		<EditText 
            android:id="@+id/jobseekerregister_repassword"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:background="@color/blanc"
            android:layout_margin="5dp"
            android:hint="@string/jobseekerregister_retypepassword" />
		
		<ImageView 
            android:id="@+id/jobseekerregister_btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/btnok"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:scaleX="1.6"
            android:contentDescription="@string/login_ok_description" />
        
    </LinearLayout>
    
</LinearLayout>
