<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:scrollbars="none"
	android:fillViewport="true" >
	
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/gris_background" >
	    
	    <LinearLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@layout/header"
		    android:orientation="vertical" >
		    
		    <ImageView 
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/logo"
		        android:scaleType="fitStart"
		        android:layout_marginLeft="@dimen/margin_medium"
		        android:contentDescription="@string/logo_description" />
		    
		    <View 
				android:layout_width="fill_parent"
				android:layout_height="@dimen/separator"
				android:background="@color/noir" />
		    
	    </LinearLayout>
	    
	    <LinearLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_margin="@dimen/margin_small"
	        android:orientation="vertical" >
		    
	        <TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/applyjob_title"
				android:textSize="@dimen/main_title"
				android:layout_margin="@dimen/margin_medium"
				android:gravity="center"
				android:textColor="@color/rouge_bordeau" />
		    
	        <TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/applyjob_jobTitle"
				android:textSize="@dimen/title"
				android:textColor="@color/bleu_ciel" />
		        
			<View 
				android:layout_width="fill_parent"
				android:layout_height="@dimen/separator"
				android:background="@color/bleu_ciel" />
			
			<TextView
				android:id="@+id/applyjob_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content" />
			
			<TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/applyjob_jobInformation"
				android:textSize="@dimen/title"
				android:textColor="@color/bleu_ciel" />
		        
			<View 
				android:layout_width="fill_parent"
				android:layout_height="@dimen/separator"
				android:background="@color/bleu_ciel" />
			
			<TextView
				android:id="@+id/applyjob_date"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content"
				android:text="@string/applyjob_jobDate" />
			
			<TextView
				android:id="@+id/applyjob_type"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content"
				android:text="@string/applyjob_jobType" />
			
			<TextView
				android:id="@+id/applyjob_domaine"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content"
				android:text="@string/applyjob_jobDomaine" />
			
			<TextView
				android:id="@+id/applyjob_city"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content"
				android:text="@string/applyjob_jobCity" />
			
			<TextView 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/applyjob_jobDescription"
				android:textSize="@dimen/title"
				android:textColor="@color/bleu_ciel" />
		        
			<View 
				android:layout_width="fill_parent"
				android:layout_height="@dimen/separator"
				android:background="@color/bleu_ciel" />
			
			<TextView
				android:id="@+id/applyjob_description"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/margin_small"
				android:textColor="@color/noir"
				android:textSize="@dimen/content" />
			
			<Button 
			    android:id="@+id/applyjob_btnpostuler"
			    android:layout_width="100dp"
			    android:layout_height="wrap_content"
			    android:text="@string/applyjob_btnApply"
			    android:layout_gravity="right" />
	        
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>